# core_cpp_2025_talk

code/01_find_package/01_boost_timer/: CMakeLists.txt  Main.cpp
code/01_find_package/02_boost_timer_targets/: CMakeLists.txt  Main.cpp
code/02_fetch_content/: CMakeLists.txt  Main.cpp
code/03_conan/01_simple_example/: CMakeLists.txt  example.json
code/03_conan/02_conan_cmake_integration/: CMakeLists.txt  Main.cpp
code/03_conan/02_conan_cmake_integration/cmake/: conan_provider.cmake
